# custom_bot_01

./: Dockerfile  main.py  pyproject.toml  requirement.txt
cogs/command/: basic.py  prefix.py
core/: __init__.py
